// Copyright 2023 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package swarming.bq.tasks;

option go_package = "go.chromium.org/luci/swarming/server/bq/taskspb;taskspb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message CreateExportTask {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Duration duration = 2;
  string cloud_project = 3;
  string dataset = 4;
  string table_name = 5;
}
